<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello_world">Hello world! </string>

    <!-- login -->
    <string name="app_name">青柚</string>
    <string name="action_settings">设置</string>
    <string name="desc">desc</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="next_step">下一步</string>
    <string name="register_qingyou"><u>注册 青柚</u></string>
    <string name="login_hint">Email/手机号</string>
    <string name="pwd_hint">密码</string>
    <string name="login_quest">登录遇到问题？</string>
    <string name="title_activity_main">青柚</string>
    <string name="title_activity_register">青柚</string>
    <string name="pls_phone">请输入手机号</string>
    <string name="pls_pwd">请输入密码</string>
    <string name="pls_pwd_2">请重复密码</string>
    <string name="policy1">我已阅读并同意</string>
    <string name="policy2"><u>使用条款和隐私政策</u></string>
    <string name="alert_info_null"></string>

    <!-- input alert info -->
    <string name="account_illegal">Email/手机号输入有误</string>
    <string name="phone_is_illegal">请输入正确的手机号</string>
    <string name="pwd_not_match">重复密码输入有误</string>
    <string name="title_activity_basic_info">青柚</string>
    <string name="name">姓名</string>
    <string name="nickname">昵称</string>
    <string name="nickname2">交友昵称</string>
    <string name="gender">性别</string>
    <string name="height_short">身高</string>
    <string name="height">身高cm</string>
    <string name="birthday">生日</string>
    <string name="birthday_value">1990-6-15</string>
    <string name="school">学校</string>
    <string name="discipline">学科</string>
    <string name="major">专业</string>
    <string name="grade">年级</string>
    <string name="name_hint">真实姓名哦</string>
    <string name="nickname_hint">好玩的昵称</string>
    <string name="height_hint">单位cm</string>
    <string name="weight_hint">单位kg</string>
    <string name="birthday_hint">YYYY-MM-DD</string>
    <string name="school_hint">请选择学校</string>
    <string name="discipline_hint">请选择学科</string>
    <string name="grade_hint">请选择年级</string>
    <string name="province_hint">请选择省份</string>
    <string name="city_hint">请选择城市</string>
    <string name="man">男</string>
    <string name="man_num">0</string>
    <string name="woman">女</string>
    <string name="woman_num">1</string>
    <string name="man_woman">都行</string>
    <string name="all_num">2</string>
    <string name="pls_input_info">完善资料</string>

    <!-- identify -->
    <string name="title_activity_identify">青柚</string>
    <string name="pls_identify">身份认证</string>
    <string name="pass">跳过</string>
    <string name="identify_intro">为了保证交友环境，所有用户都必须通过学生身份的认证，您可以从以下三种方式中选择一种进行认证：</string>
    <string name="email_iden">EDU邮箱认证</string>
    <string name="photo_iden">证件照认证</string>
    <string name="friend_iden">好友推荐认证</string>
    <string name="pls_input_email">请输入以edu.cn结尾的邮箱</string>
    <string name="pls_upload_photo">请上传能证明你学生身份的照片，如学生证/校园卡/学校官网截图等</string>
    <string name="pls_input_friend">请输入两个已通过身份认证的同学的手机号，他们将帮助你通过认证</string>
    <string name="upload_photo">上传照片</string>
    <string name="friend_1">同学1手机号</string>
    <string name="friend_2">同学2手机号</string>
    <string name="finish">完成</string>
    <string name="title_activity_image_upload">上传照片</string>
    <string name="cancel">取消</string>
    <string name="pls_choose_orign">选择认证的照片</string>

    <!-- recommand today -->
    <string name="recommand_today">今日推荐</string>
    <string name="recommand_history">推荐</string>
    <string name="self_page">主页</string>
    <string name="me">我</string>
    <string name="chat_history">聊天</string>
    <string name="nickname_value">企鹅</string>
    <string name="star">星座</string>
    <string name="star_value">摩羯座</string>
    <string name="school_value">中国科技大学</string>
    <string name="age">年龄</string>
    <string name="age_value">23</string>
    <string name="height_value">155</string>
    <string name="center"></string>
    <string name="hot_num_1">21</string>
    <string name="hot_num_2">37</string>
    <string name="title_activity_test">青柚</string>
    <string name="title_activity_sys_main">青柚</string>
    <string name="title_activity_reco_today_frag">青柚</string>
    <string name="title_activity_reco_history_frag">青柚</string>
    <string name="title_activity_self_page_frag">青柚</string>

    <!-- recommand history -->
    <string name="today_noon">今天中午</string>
    <string name="today_night">今天晚上</string>
    <string name="yester_noon">昨天中午</string>
    <string name="yester_night">昨天晚上</string>
    <string name="match_num">91</string>
    <string name="title_activity_homepage">青柚</string>

    <!-- homepage -->
    <string name="basic_info">基本信息</string>
    <string name="shuoshuo">交友宣言</string>
    <string name="education">学校专业</string>
    <string name="hometown">故乡地区</string>
    <string name="hometown2">故乡</string>
    <string name="hobby_tag">兴趣爱好</string>
    <string name="personal_tag">自我评价</string>
    <string name="shuoshuo_value">今天终于彻底毕业了,论文答辩结束,下天终于彻底毕业了,论文答辩结束,mark一下~~~</string>
    <string name="education_value">中国科学技术大学-管理学硕士</string>
    <string name="no_value">未填写</string>
    <string name="hometown_value">河南-信阳</string>
    <string name="info1_value">女24</string>
    <string name="info2_value">155cm</string>
    <string name="hobby_tag1">美食</string>
    <string name="hobby_tag2">旅行</string>
    <string name="hobby_tag3">摄影</string>
    <string name="hobby_tag4">运动</string>
    <string name="hobby_tag5">读书</string>
    <string name="personal_tag1">超级帅</string>
    <string name="personal_tag2">身材好</string>
    <string name="personal_tag3">爱干净</string>
    <string name="personal_tag4">很可爱</string>
    <string name="personal_tag5">活泼</string>
    <string name="latest_shuoshuo_1">恩恩，好吧，明天再陪你玩哈~</string>
    <string name="latest_shuoshuo_2">有信念礼物啊，我要的不多，求一对YY熊</string>
    <string name="datetime">中午12:26</string>
    <string name="title_activity_edit_info">编辑页面</string>
    <string name="edit_info">资料编辑</string>
    <string name="ideal_setting">理想的TA</string>
    <string name="weight">体重kg</string>
    <string name="ideal_ta">理想的TA</string>
    <string name="my_hometown">我的主页</string>
    <string name="sys_setting">设置</string>
    <string name="sys_exit">退出账号</string>
    <string name="ideal_tag">TA的标签</string>
    <string name="age_min">16</string>
    <string name="age_max">30</string>
    <string name="height_min">140</string>
    <string name="height_max">230</string>
    <string name="weight_min">30</string>
    <string name="weight_max">100</string>
    <string name="title_activity_ta_main">TA的主页</string>

    <!-- ta_main -->
    <string name="match">匹配</string>
    <string name="match_degree">匹配度</string>
    <string name="match_degree_num">80%</string>
    <string name="recom_degree">推荐指数</string>
    <string name="recom_reason">推荐理由</string>
    <string name="recom_reason_value">你们有共同的兴趣爱好 看电影 爱美食\nTA身高 155cm 符合你的要求哦\nTA在 安徽大学 离你很近哦\n机会难得，赶紧和TA聊聊吧~</string>
    <string name="hot_degree">亲密指数</string>
    <string name="ta_for_me">TA对我</string>
    <string name="me_for_ta">我对TA</string>
    <string name="hot_desc">状态说明</string>
    <string name="hot_desc_value">亲密指数过低，都达到60才能公开彼此相册等信息哦，试试和TA聊天吧，加油~</string>
    <string name="title_activity_ta_setting">青柚</string>
    <string name="title_activity_chat">青柚</string>
    <string name="ta_permission_set">权限设置</string>
    <string name="addto_black_list">加入黑名单</string>
    <string name="no_disturb_mode">开启免打扰模式</string>
    <string name="clear_chat_history">清空聊天记录</string>
    <string name="complaint">投诉举报</string>
    <string name="title_activity_tags_edit">青柚</string>
    <string name="tags_edit_title_1">兴趣爱好</string>
    <string name="tags_edit_title_2">自我评价</string>
    <string name="tags_edit_title_3">TA的标签</string>
    <string name="hobby_tag_string">美食，旅行，摄影，电影，读书，运动，宠物，音乐，时尚，购物</string>
    <string name="personal_tag_string">超级帅，很可爱，有素质，身材好，性感，自信，幽默风趣，活泼，爱运动，人缘好，爱干净，温柔体贴，直率，文艺，很独立，知性</string>

    <!-- others -->
    <string name="network_exception">网络连接失败</string>
    <string name="account_pwd_exception">账号或密码错误</string>
    <string name="phone_repeat_exception">该手机号已注册过，请直接登录</string>
    <string name="server_exception">服务器异常</string>
    <string name="submit_success">资料保存成功</string>
    <string name="register_success">注册成功</string>
    <string name="shuoshuo_hint">对TA说点什么吧</string>
    <string name="hometown_hint">您来自于哪里呢</string>
    <string name="mail_sent_alert">身份认证邮件已发送，请登录邮箱激活账号</string>
    <string name="title_activity_photo_show">青柚</string>
    <string name="no_recom_alert">暂时没有新推荐\n请耐心等待</string>
    <string name="no_message_alert">暂时没有新消息</string>
    <string name="new_message_num">1</string>
    <string name="suffix">suffix</string>
    <string name="title_activity_ideal_ta">青柚</string>
    <string name="title_activity_ideal_setting">青柚</string>
    <string name="title_activity_my_show">青柚</string>
    <string name="title_activity_identify_code">青柚</string>
    <string name="identify_phone">验证手机号</string>
    <string name="we_have_send">我们已经发送了验证码到您的手机:</string>
    <string name="phone_number">+86 185 1605 9269</string>
    <string name="identify_code">验证码</string>
    <string name="time_needed">接收过程大约需要15秒钟，请耐心等待</string>
    

</resources>
