<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/action_bar"
    android:layout_width="fill_parent"
    android:layout_height="@dimen/bar_height"
    android:background="@color/bgcolor"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/cancel_back"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:paddingLeft="@dimen/margin_right"
        android:text="@string/cancel"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/font_28" />

    <LinearLayout
        android:id="@+id/device_name"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:gravity="center"
            android:text="@string/edit_info"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/font_32" />
    </LinearLayout>

    <TextView
        android:id="@+id/edit_submit"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:paddingRight="@dimen/margin_right"
        android:text="@string/finish"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/font_28" />

</LinearLayout>